<resources>
    <string name="app_name">Compro</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="join_as_a_user_or_professional">Join As A User Or Professional</string>
    <string name="i_m_a_professional_hiring_for_n_a_project">I\'m a Professional , looking\n for a Work</string>
    <string name="register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resizable_text_read_more">…Show More</string>
    <string name="resizable_text_read_less">…Show Less</string>
    <string name="_5_10_min">5-10 min</string>
    <string name="upload_photo">Upload photo</string>
    <string name="ex_london">Ex:London</string>
    <string name="city">City *</string>
    <string name="ex_usa">Ex:USA</string>
    <string name="state_province">State/Province</string>
    <string name="enter_state_province">Enter state/province</string>
    <string name="zip_postal_code">ZIP/Postal code *</string>
    <string name="enter_zip_postal_code">Enter ZIP/Postal code</string>
    <string name="enter_street_address">Enter Street Address</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="imagepersonicon">imagePersonIcon</string>
    <string name="are_you_sure_you_want_to_delete_your_account">Are you sure you want to delete your account?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="are_you_sure_you_want_to">Are you sure you want to</string>
    <string name="logout">logout?</string>
    <string name="imagecross">imageCross</string>
    <string name="add_education">Add Education</string>
    <string name="school">School</string>
    <string name="ex_northwestern_university">Ex: Northwestern University</string>
    <string name="degree">Degree</string>
    <string name="ex_bachelors">Ex: Bachelors</string>
    <string name="field_of_study">Field of Study</string>
    <string name="ex_computer_science">Ex: Computer Science</string>
    <string name="country">Country</string>
    <string name="ex_usa1">Ex:USA</string>
    <string name="start_date">Start Date</string>
    <string name="_1_1_2024">1/1/2024</string>
    <string name="end_date">End Date</string>
    <string name="_11_10_2024">11/10/2024</string>
    <string name="description">Description</string>
    <string name="ex_bachelors1">Ex: Bachelors</string>
    <string name="submit">Submit</string>
    <string name="optional">(optional)</string>
    <string name="add_a_new_portfolio_nprojects">Add a new portfolio\nprojects</string>
    <string name="all_fields_are_required_unless_otherwise_nindicated">All fields are required unless otherwise\nindicated.</string>
    <string name="project_title">Project title</string>
    <string name="enter_a_brief_but_descriptive_title">Enter a brief but descriptive title</string>
    <string name="_70_characters_left">70 characters left</string>
    <string name="your_role">Your role</string>
    <string name="e_g_front_end_engineer_or_marketing_analyst">e.g., Front-end engineer or Marketing analyst</string>
    <string name="_100_characters_left">100 characters left</string>
    <string name="project_description">Project description</string>
    <string name="briefly_describe_the_project_s_goals_your_nsolution_and_the_impact_you_made_here">Briefly describe the project\'s goals, your\nsolution and the impact you made here</string>
    <string name="_600_characters_left">600 characters left</string>
    <string name="upload_your_resume">Upload your resume</string>
    <string name="resume">Resume</string>
    <string name="edit_skills">Edit Skills</string>
    <string name="your_skills">Your skills</string>
    <string name="enter_skills_here">Enter skills here</string>
    <string name="max_15_skills">Max 15 skills</string>
    <string name="select">Select</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="your_photo">Your photo</string>
    <string name="upload">Upload</string>
    <string name="or_drop">or drop</string>
    <string name="image_here">image here</string>
    <string name="_250_x_250_min_5_mb_max">250 x 250 Min / 5 MB Max</string>
    <string name="must_be_an_actual_photo_of_you">Must be an actual photo of you.</string>
    <string name="logos_clip_group_photos_and_digitally_altered_nimages_are_not_allowed">Logos, clip, group photos, and digitally-altered\nimages are not allowed.</string>
    <string name="attach_photo">Attach Photo</string>
    <string name="_0">0</string>
    <string name="rohit_jasiwal">Rohit Jasiwal</string>
    <string name="professional">Professional</string>
    <string name="your_account_is_verified">Your Account Is Verified</string>
    <string name="_5_8_create_your_profile"><![CDATA[5/8  Create your profile]]></string>
    <string name="certification">Certification</string>
    <string name="add_details_of_certifications_you_have_achieved_completed">Add details of Certifications you have achieved/completed.</string>
    <string name="certification_name">Certification Name</string>
    <string name="certification_completion_id">Certification Completion ID</string>
    <string name="ex_bachelors11">Ex: Bachelors1</string>
    <string name="certification_url">Certification URL</string>
    <string name="ex_bachelors111">Ex: Bachelors</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="skip_for_now">Skip For Now</string>
    <string name="_2_8_create_your_profile"><![CDATA[2/8  Create your profile]]></string>
    <string name="education">Education</string>
    <string name="all_fields_are_required_unless_otherwise_indicated">All fields are required unless otherwise indicated.</string>
    <string name="add_education1">Add Education</string>
    <string name="you_need_to_add_your_experience">You need to add your experience</string>
    <string name="_1_8_create_your_profile"><![CDATA[1/8  Create your profile]]></string>
    <string name="experience">Experience</string>
    <string name="all_fields_are_required_unless_otherwise_indicated1">All fields are required unless otherwise indicated.</string>
    <string name="add_experience">Add experience</string>
    <string name="you_need_to_add_your_experience1">You need to add your experience</string>
    <string name="_6_8_create_your_profile"><![CDATA[6/8  Create your profile]]></string>
    <string name="how_would_you_like_to_tell_us_nabout_yourself">How would you like to tell us\nabout yourself?</string>
    <string name="we_need_to_get_a_sense_of_your_education_experience_and_skills_it_s_quickest_to_import_your_information_you_can_edit_it_before_your_profile_goes_live">We need to get a sense of your education, experience and skills. It’s quickest to import your information — you can edit it before your profile goes live.</string>
    <string name="upload_your_resume1">Upload your resume</string>
    <string name="upload_your_resume2">Upload your resume</string>
    <string name="enter_skills_here1">Enter skills here</string>
    <string name="max_15_skills1">Max 15 skills</string>
    <string name="suggested_skills">Suggested skills</string>
    <string name="_4_8_create_your_profile"><![CDATA[4/8  Create your profile]]></string>
    <string name="your_skills_show_clients_what_you_can_offer_and_help_us_choose_which_njobs_to_recommend_to_you_add_or_remove_the_ones_we_ve_suggested_nor_start_typing_to_pick_more_it_s_up_to_you">Your skills show clients what you can offer, and help us choose which\njobs to recommend to you. Add or remove the ones we’ve suggested,\nor start typing to pick more. It’s up to you.</string>
    <string name="nearly_there_what_work_are_you_nhere_to_do">Nearly there! What work are you\nhere to do?</string>
    <string name="contact">Contact</string>
    <string name="priyanka_chawla">Priyanka Chawla</string>
    <string name="_9999_999_999">9999 999 999</string>
    <string name="vinod_glocalassist_com">vinod@glocalassist.com</string>
    <string name="canada">Canada</string>
    <string name="ratings">Ratings</string>
    <string name="contrary_to_popular_belief_lorem_ipsum_is_not_simply_random_text_it_has_roots_in_a_piece_of_classical_latin_literature_from_45_bc">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC.....</string>
    <string name="experience1">Experience</string>
    <string name="location">location</string>
    <string name="portfolio">Portfolio</string>
    <string name="review">Review</string>
    <string name="download">Download</string>
    <string name="leave_review">Leave Review</string>
    <string name="leave_review_takes_it_to_the_next_level">Leave review takes it to the next level.</string>
    <string name="tell_us_a_few_words">Tell Us A Few Words</string>
    <string name="submit_review">Submit Review</string>
    <string name="dentist_doctor">Dentist Doctor</string>
    <string name="hey_vikash_ready_for_your_nnext_big_opportunity">Hey Vikash. Ready for your\nnext big opportunity?</string>
    <string name="answer_a_few_questions_and_start_building_your_nprofile">Answer a few questions and start building your\nprofile.</string>
    <string name="apply_for_open_roles_or_list_services_for_clients_to_nbuy">Apply for open roles or list services for clients to\nbuy.</string>
    <string name="get_paid_safely_and_know_we_re_there_to_help">Get paid safely and know we’re there to help.</string>
    <string name="get_started">Get Started</string>
    <string name="email123_gmail_com">Email123@.gmail.com</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_link">Send Password Reset Link</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="mobile">Mobile</string>
    <string name="or">OR</string>
    <string name="already_a_member">Already a member?</string>
    <string name="login_here">Login Here</string>
    <string name="create_an_account">Create An Account</string>
    <string name="_7_8_create_your_profile"><![CDATA[7/8  Create your profile]]></string>
    <string name="ex_doctor">Ex: Doctor</string>
    <string name="apt_suite">Apt/Suite</string>
    <string name="_10_12_24">10/12/24</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="professional_title">Professional Title *</string>
    <string name="street_address">Street address *</string>
    <string name="edit_experience">Edit Experience</string>
    <string name="savitri_public_school">Savitri Public School</string>
    <string name="it">IT</string>
    <string name="india">India</string>
    <string name="title">Title</string>
    <string name="sangam_vihar_new_delhi">Sangam vihar new delhi</string>
    <string name="new_delhi">New Delhi</string>
    <string name="edit_certification">Edit Certification</string>
    <string name="oxford_software_institute">oxford software institute</string>
    <string name="professional_experience">Professional Experience</string>
    <string name="company">Company</string>
    <string name="head_field_solution_pvt1">head field solution pvt</string>
    <string name="location1">Location</string>
    <string name="noida">Noida</string>
    <string name="front_end_developer1">front end developer</string>
    <string name="_2019_05_291">2019-05-29</string>
    <string name="end_date1">End Date</string>
    <string name="_2024_08_221">2024-08-22</string>
</resources>